# minio-rs-alpha

./: Cargo.toml
src/: lib.rs
src/s3/: bucket.rs  credentials.rs  error.rs  etag.rs  mod.rs  object.rs  region.rs  request.rs  sv4.rs
tests/: bucket.rs  credentials.rs  etag.rs  region.rs
